# holocron

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DECISIONS.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  tools.py
.claude/skills/add-tool/: SKILL.md
.claude/skills/run-eval/: SKILL.md
.github/workflows/: ci.yml
agent/: holocron.py  smoke.py
api/: __main__.py  app.py
core/: domain.py  embeddings.py
docs/adr/: 0001-langgraph-over-pydantic-ai.md  0002-corpus-lock.md  0003-nextjs-fastapi-sse.md  0004-oo-style.md  0005-pgvector-over-lancedb.md
eval/: __init__.py  __main__.py  answer.py  golden.py  golden_set.json  judge.py  report.py  sync.py
eval/baselines/20260710T181909Z/: report.md  run.json
eval/baselines/20260710T215754Z/: report.md  run.json
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: GraphPanel.tsx  NodePanel.tsx  globals.css  layout.tsx  page.tsx
frontend/lib/: continuity.ts  events.test.ts  events.ts  graph.test.ts  graph.ts  markdown.tsx
ingest/: __main__.py  embed.py  graph.py  parse.py  wiki.py
retrieval/: __init__.py  graph.py  vector.py
tests/: conftest.py  test_agent_toolset.py  test_api.py  test_core.py  test_eval_answer.py  test_eval_judge.py  test_eval_report.py  test_eval_sync.py  test_golden_set.py  test_graph_tools.py  test_knowledge_graph.py  test_lock.py  test_parse.py  test_search.py  test_tools.py  test_vector_index.py
tests/fixtures/: Blaster.json  George_Lucas.json  Jedi_Order.json  Kit_Fisto.json  Kit_Fisto_Legends.json  Tatooine.json
(+557 files in other folders)
