[project]
name = "holocron"
version = "0.1.0"
description = "Star Wars lore agent: agentic RAG over a Wookieepedia knowledge graph + vector index"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mwparserfromhell>=0.6",
    "lancedb>=0.15",
    "neo4j>=5.25",
    "python-dotenv>=1.0",
    "langgraph>=1.2.8",
    "langchain-anthropic>=1.4.8",
    "langfuse>=4.13.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "langchain>=1.3.12",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8", "pyright>=1.1"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["ingest", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
